# ratatui-binary-data-widget

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: bench.rs
examples/: example.rs
src/: color.rs  lib.rs  render_positions.rs  state.rs
