[package]
name = "ratatui-binary-data-widget"
description = "Binary Data Widget for ratatui"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/ratatui-binary-data-widget"
authors = ["EdJoPaTo <ratatui-binary-data-widget-rust@edjopato.de>"]
edition = "2021"
keywords = ["tui", "terminal", "binary", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.bench]
codegen-units = 1
debug = true
lto = true

[dependencies]
# ratatui = { path = "/home/edjopato/git/hub/EdJoPaTo-fork/public/ratatui" }
ratatui = { version = "0.26", default-features = false }

[dev-dependencies]
criterion = "0.6"
crossterm = "0.27"
ratatui = "0.26"

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }

[[bench]]
name = "bench"
harness = false
