[package]
name = "ratatui-binary-data-widget"
description = "Binary Data Widget for ratatui"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/ratatui-binary-data-widget"
authors = ["EdJoPaTo <ratatui-binary-data-widget-rust@edjopato.de>"]
edition = "2024"
keywords = ["tui", "terminal", "binary", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]

[lints.rust]
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.bench]
codegen-units = 1
debug = true
lto = true

[dependencies]
ratatui-core = { version = "0.1.0", default-features = false }
ratatui-widgets = "0.3.0"

[dev-dependencies]
criterion = "0.8"
ratatui = "0.30"

[[bench]]
name = "bench"
harness = false
